cs-mod/k8s-mod/hello-oauth2/mod-hello-oauth2.yaml
#
#   k8s mod: hello-oauth2 
#
#     Example app based on paulbouwer/hello-kubernetes
#     Published at https://hello-oauth2.mod.cskylab.net
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-oauth2
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-test-internal
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    # cert-manager.io/cluster-issuer: letsencrypt
    #
    ## Ingress annotations for oauth2-proxy
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.hello-oauth2.mod.cskylab.net/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.hello-oauth2.mod.cskylab.net/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"


spec:
  rules:
  - host: hello-oauth2.mod.cskylab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-svc
            port:
              number: 80
  tls:
  - hosts:
      - hello-oauth2.mod.cskylab.net
    secretName: hello-kubernetes-tls

---

apiVersion: v1
kind: Service
metadata:
  namespace: hello-oauth2
  name: hello-kubernetes-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-oauth2
  name: hello-kubernetes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: harbor.cskylab.net/dockerhub/paulbouwer/hello-kubernetes:1.9
        resources:
        ports:
        - containerPort: 8080
